feat: communication between back and twilio created

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && tsc"
+    "build": "npm install && tsc",
+    "dev": "npm run build && node build/app"
   },
   "keywords": [],
   "author": "",
