--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TWILIO_ACCOUNT_SID=AC8531241b8cbfe167b6abf3380abbe2fe
 TWILIO_AUTH_TOKEN=35592a8470697306f75a46ca68d3785f
-WHATSAPP_PHONE_NUMBER=+14155238886
+WHATSAPP_PHONE_NUMBER=whatsapp:+14155238886
